--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "http-server ./cesiumClientWeb --port 4000",
     "screenshot": "node ./puppeteer",
     "postinstall": "npm run copyassets:all",
-    "copyassets:all": "npm run copyassets:cesium",
-    "copyassets:cesium": "copyfiles -u 3 \"./node_modules/cesium/Build/Cesium/**/*\" \"./cesiumClientWeb/scripts\""
+    "copyassets:all": "npm run copyassets:cesium && npm run copyassets:mc-fonts",
+    "copyassets:cesium": "copyfiles -u 3 \"./node_modules/cesium/Build/Cesium/**/*\" \"./cesiumClientWeb/scripts\"",
+    "copyassets:mc-fonts": "copyfiles -u 6 \"./node_modules/@map-colonies/static-assets/dist/fonts/mc-font/fonts/*\" \"./node_modules/@map-colonies/static-assets/dist/fonts/mc-font/style.css\" \"./cesiumClientWeb/public/fonts/mc-icons\""
+
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "copyfiles": "^2.4.1"
   },
   "dependencies": {
+    "@map-colonies/static-assets": "^0.2.0",
     "cesium": "^1.94.0",
     "http-server": "^14.1.1",
     "puppeteer": "^14.2.0"
