--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "http-server ./cesiumClientWeb --port 4000",
     "screenshot": "node ./puppeteer",
     "postinstall": "npm run copyassets:all",
-    "copyassets:all": "npm run copyassets:cesium && npm run copyassets:mc-fonts",
+    "copyassets:all": "npm run copyassets:cesium && npm run copyassets:mc-fonts && npm run copyassets:turf",
     "copyassets:cesium": "copyfiles -u 3 \"./node_modules/cesium/Build/Cesium/**/*\" \"./cesiumClientWeb/scripts\"",
+    "copyassets:turf": "copyfiles -u 1 \"./node_modules/turf/turf.min.js\" \"./cesiumClientWeb/scripts\"",
     "copyassets:mc-fonts": "copyfiles -u 6 \"./node_modules/@map-colonies/static-assets/dist/fonts/mc-font/fonts/*\" \"./node_modules/@map-colonies/static-assets/dist/fonts/mc-font/style.css\" \"./cesiumClientWeb/public/fonts/mc-icons\""
-
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "@map-colonies/static-assets": "^0.2.0",
     "cesium": "^1.94.0",
     "http-server": "^14.1.1",
-    "puppeteer": "^14.2.0"
+    "puppeteer": "^14.2.0",
+    "turf": "^3.0.14"
   }
 }
